--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La note enchantée</title>
+    <title>À la française</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="styles/style_menu.css">
+    <link rel="stylesheet" type="text/css" href="public/style.css">
     <!-- Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <!-- Google Fonts -->
@@ -19,32 +19,31 @@
     <!-- header -->
     <header>
         <div class="header">
-            <div class="icon_back"><a href="../index.html"><i class="fas fa-arrow-left"></i></a>
+            <div class="header_icon"><a href="../index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
             <a href="../index.html"><h1 class="header_logo">ohmyfood</h1></a>
-        </div>
     </header>
 
     <!-- top image -->
-        <div class="top_img">
-            <img class="img" src="../images/restaurants/restaurant_1.jpg" alt="La note enchantée">
+        <div class="image">
+            <img class="image_img" src="./images/restaurants/restaurant03.jpg" alt="À la française">
         </div>
 
     <!-- menu -->
         <section id="menu">
             <div class="menu_top">
-                <h2 class="menu_top_title">La note enchantée</h2>
+                <h2 class="menu_top_title">À la française</h2>
                 <div class="menu_heart">
                     <i class="far fa-heart"></i>
                 </div>
             </div>
-            <div class="menu_blocs">
-                <div class="menu_bloc">
+            <div class="menu_bloc">
+                <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Entrées</h3></div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Ravioles de foie gras</h3>
-                                <p class="dish_subtitle">Accompagnés de leur crème à la truffe</p>
+                                <h3 class="dish_title">Tartare de poulpe acidulé</h3>
+                                <p class="dish_subtitle">Aux zestes d'orange</p>
                             </div>
                             <div class="dish_price">25€</div>
                         </div>
@@ -53,8 +52,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Caviar osciètre</h3>
-                                <p class="dish_subtitle">Sur blini à la farine de blé noir</p>
+                                <h3 class="dish_title">Velouté de légumes d'antan</h3>
+                                <p class="dish_subtitle">Carotte, panais, topinambour</p>
                             </div>
                             <div class="dish_price">35€</div>
                         </div>
@@ -63,31 +62,21 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Homard et espuma de potiron</h3>
-                                <p class="dish_subtitle">Mariné aux zestes d'orange</p>
+                                <h3 class="dish_title">Soupe à l'oignon</h3>
+                                <p class="dish_subtitle">Revisitée</p>
                             </div>
                             <div class="dish_price">20€</div>
                         </div>
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
-                            <div class="dish_info">
-                                <h3 class="dish_title">Foie gras de canard cuit entier</h3>
-                                <p class="dish_subtitle">Confiture de figue et pain toasté</p>
-                            </div>
-                            <div class="dish_price">35€</div>
-                        </div>
-                        <div class="selection__box">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
                 </div>
-                <div class="menu_bloc">
+                <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Plats</h3></div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title"></h3>Noix de coquilles Saint-Jacques</h3>
-                                <p class="dish_subtitle">Sur lit de purée de céleri-rave</p>
+                                <h3 class="dish_title">Coquilles Saint-Jacques</h3>
+                                <p class="dish_subtitle">Accompagnées d'une purée de panais</p>
                             </div>
                             <div class="dish_price">40€</div>
                         </div>
@@ -96,8 +85,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Langoustine poêlée</h3>
-                                <p class="dish_subtitle">Purée de patate douce</p>
+                                <h3 class="dish_title">Magret de canard</h3>
+                                <p class="dish_subtitle">Et parmentier de pommes de terre</p>
                             </div>
                             <div class="dish_price">35€</div>
                         </div>
@@ -106,8 +95,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Mijoté de queue de boeuf</h3>
-                                <p class="dish_subtitle">Et riz sauvage aux zestes de citron</p>
+                                <h3 class="dish_title">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <p class="dish_subtitle">Sur son lit de gnocchis aux légumes</p>
                             </div>
                             <div class="dish_price">44€</div>
                         </div>
@@ -115,12 +104,12 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                 </div>
-                <div class="menu_bloc">
+                <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Desserts</h3></div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Macaron noisette et chocolat</h3>
-                                <p class="dish_subtitle">Glace au caramel brun et sel de Guérande</p>
+                                <h3 class="dish_title">Pétales de violettes glacés</h3>
+                                <p class="dish_subtitle">Et purée de noisettes</p>
                             </div>
                             <div class="dish_price">18€</div>
                         </div>
@@ -129,8 +118,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Baba au rhum revisité</h3>
-                                <p class="dish_subtitle">Avec son coulis de citron</p>
+                                <h3 class="dish_title">Fondant au chocolat</h3>
+                                <p class="dish_subtitle">Revisité</p>
                             </div>
                             <div class="dish_price">22€</div>
                         </div>
@@ -139,8 +128,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Tarte au citron meringuée</h3>
-                                <p class="dish_subtitle">Déstructurée</p>
+                                <h3 class="dish_title">Millefeuille croustillant</h3>
+                                <p class="dish_subtitle">Myrtilles et pâte d’amande</p>
                             </div>
                             <div class="dish_price">23€</div>
                         </div>
@@ -156,26 +145,22 @@
 
     <!-- footer -->
     <footer class="footer">
-        <div class="footer_bloc">
-            <div class="logo"><a href="index.html">ohmyfood</a></div>
-            <div class="footer_links">
-                <div class="footer_link">
-                    <i class="fas fa-utensils"></i>
-                    <h3 class="footer_link_title">Proposer un restaurant</h3>
-                </div>
-                <div class="footer_link">
-                    <i class="fas fa-hands-helping"></i>
-                    <h3 class="footer_link_title">Devenir partenaire</h3>
-                </div>
-                <div class="footer_link">
-                    <h3 class="footer_link_title">Mentions légales</h3>
-                </div>
-                <div class="footer_link">
-                    <h3 class="footer_link_title"><a href="mailto:contact@ohmyfood.com">Contact</a></h3>
-                </div>
+        <div class="logo"><a href="index.html">ohmyfood</a></div>
+            <div class="footer-link">
+                <i class="fas fa-utensils"></i>
+                <h3 class="footer-link_title"><a href="#">Proposer un restaurant</a></h3>
             </div>
-        </div>
-    </footer>
-    
+            <div class="footer-link">
+                <i class="fas fa-hands-helping"></i>
+                <h3 class="footer-link_title"><a href="#">Devenir partenaire</a></h3>
+            </div>
+            <div class="footer-link"><a href="#">
+                <h3 class="footer-link_title">Mentions légales</h3></a>
+            </div>
+            <div class="footer-link">
+                <h3 class="footer-link_title"><a href="mailto:contact@ohmyfood.com">Contact</a></h3>
+            </div>
+    </footer> 
+  
 </body>
 </html>
