--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 <body> 
 
+    <!-- page loader -->
+    <section class="spinner">
+        <span class="spinner_load">
+            <div class="spinner_icon"><i class="fas fa-utensils"></i></div>
+        </span>
+    </section>
+
     <!-- header -->
     <header>
         <div class="header">
