sass_spinner+heart

--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
                                 <h3 class="restaurant_info-name">La palette du goût</h3>
                                 <p class="restaurant_info-city">Ménilmontant</p>
                             </div>
-                            <div class="restaurant_bloc-heart">
-                                <i class="far fa-heart"></i>
+                            <div class="restaurant_bloc_heart">
+                                <div class="bloc_heart-empty">
+                                    <i class="far fa-heart"></i></div>
+                                <div class="bloc_heart-full">
+                                    <i class="fas fa-heart"></i></div>
                             </div>
                         </div>
                     </div>
@@ -102,7 +105,7 @@
                                 <h3 class="restaurant_info-name">La note enchantée</h3>
                                 <p class="restaurant_info-city">Charonne</p>
                             </div>
-                            <div class="restaurant_bloc-heart">
+                            <div class="restaurant_bloc_heart">
                                 <i class="far fa-heart"></i>
                             </div>
                         </div>
@@ -119,7 +122,7 @@
                                 <h3 class="restaurant_info-name">À la française</h3>
                                 <p class="restaurant_info-city">Cité Rouge</p>
                             </div>
-                            <div class="restaurant_bloc-heart">
+                            <div class="restaurant_bloc_heart">
                                 <i class="far fa-heart"></i>
                             </div>
                         </div>
@@ -136,7 +139,7 @@
                                 <h3 class="restaurant_info-name">Le délice des sens</h3>
                                 <p class="restaurant_info-city">Folie-Méricourt</p>
                             </div>
-                            <div class="restaurant_bloc-heart">
+                            <div class="restaurant_bloc_heart">
                                 <i class="far fa-heart"></i>
                             </div>
                         </div>
