sass_heart+button

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <body> 
 
     <!-- page loader -->
-    <section class="spinner">
+    <div class="spinner">
         <span class="spinner_load">
-            <div class="spinner_icon"><i class="fas fa-utensils"></i></div>
+            <b class="spinner_icon"><i class="fas fa-utensils"></i></b>
         </span>
-    </section>
+    </div>
 
     <!-- header -->
     <header>
@@ -74,7 +74,7 @@
         <section class="restaurants">
             <h2 class="restaurants_title">Restaurants</h2>
             <div class="restaurant_items">
-                <a href="menu_page/la-palette-du-gout.html">
+                <a href="la-palette-du-gout.html">
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
                             <p class="restaurant_item_new">Nouveau</p>
@@ -85,16 +85,20 @@
                                 <h3 class="restaurant_info-name">La palette du goût</h3>
                                 <p class="restaurant_info-city">Ménilmontant</p>
                             </div>
-                            <div class="restaurant_bloc_heart">
+                            <!--<div class="restaurant_bloc_heart">
                                 <div class="bloc_heart-empty">
-                                    <i class="far fa-heart"></i></div>
+                                    <i class="far fa-heart"></i></div>     test 2 
                                 <div class="bloc_heart-full">
                                     <i class="fas fa-heart"></i></div>
-                            </div>
+                            </div>-->
+                            
+                            <span class="heart">
+                                <i class="fas fa-heart"></i>
+                                </span>
                         </div>
                     </div>
                 </a>
-                <a href="menu_page/la-note-enchantee.html">
+                <a href="la-note-enchantee.html">
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
                             <p class="restaurant_item_new">Nouveau</p>
@@ -105,13 +109,13 @@
                                 <h3 class="restaurant_info-name">La note enchantée</h3>
                                 <p class="restaurant_info-city">Charonne</p>
                             </div>
-                            <div class="restaurant_bloc_heart">
-                                <i class="far fa-heart"></i>
-                            </div>
+                            <span class="heart">
+                                <i class="fas fa-heart"></i>
+                            </span>
                         </div>
                     </div>
                 </a>
-                <a href="menu_page/a-la-francaise.html">
+                <a href="a-la-francaise.html">
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
                             <p class="restaurant_item_new">Nouveau</p>
@@ -122,13 +126,13 @@
                                 <h3 class="restaurant_info-name">À la française</h3>
                                 <p class="restaurant_info-city">Cité Rouge</p>
                             </div>
-                            <div class="restaurant_bloc_heart">
-                                <i class="far fa-heart"></i>
-                            </div>
+                            <span class="heart">
+                                <i class="fas fa-heart"></i>
+                            </span>
                         </div>
                     </div>
                 </a>
-                <a href="menu_page/le-delice-des-sens.html">
+                <a href="le-delice-des-sens.html">
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
                             <p class="restaurant_item_new">Nouveau</p>
@@ -139,9 +143,9 @@
                                 <h3 class="restaurant_info-name">Le délice des sens</h3>
                                 <p class="restaurant_info-city">Folie-Méricourt</p>
                             </div>
-                            <div class="restaurant_bloc_heart">
-                                <i class="far fa-heart"></i>
-                            </div>
+                            <span class="heart">
+                                <i class="fas fa-heart"></i>
+                            </span>
                         </div>
                     </div>
                 </a>
