--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -86,7 +86,7 @@
                     <div class="menu_bloc_title"><h3>Plats</h3></div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title"></h3>Noix de coquilles Saint-Jacques</h3>
+                                <h3 class="dish_title">Noix de coquilles Saint-Jacques</h3>
                                 <p class="dish_subtitle">Sur lit de purée de céleri-rave</p>
                             </div>
                             <div class="dish_price">40€</div>
