--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -19,9 +19,9 @@
     <!-- header -->
     <header>
         <div class="header">
-            <div class="header_icon"><a href="../index.html"><i class="fas fa-arrow-left"></i></a>
-            </div>
+            <div class="header_icon"><a href="../index.html"><i class="fas fa-arrow-left"></i></a></div>
             <a href="../index.html"><h1 class="header_logo">ohmyfood</h1></a>
+        </div>
     </header>
 
     <!-- top image -->
