--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -34,9 +34,9 @@
         <section id="menu">
             <div class="menu_top">
                 <h2 class="menu_top_title">La note enchantée</h2>
-                <div class="menu_heart">
-                    <i class="far fa-heart"></i>
-                </div>
+                <span class="heart">
+                    <i class="fas fa-heart"></i>
+                </span>
             </div>
             <div class="menu_bloc">
                 <div class="menu_bloc_card">
