--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -40,7 +40,7 @@
             <div class="menu_bloc">
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Entrées</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--1">
                             <div class="dish_info">
                                 <h3 class="dish_title">Tartare de poulpe acidulé</h3>
                                 <p class="dish_subtitle">Aux zestes d'orange</p>
@@ -50,7 +50,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--2">
                             <div class="dish_info">
                                 <h3 class="dish_title">Velouté de légumes d'antan</h3>
                                 <p class="dish_subtitle">Carotte, panais, topinambour</p>
@@ -60,7 +60,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--3">
                             <div class="dish_info">
                                 <h3 class="dish_title">Soupe à l'oignon</h3>
                                 <p class="dish_subtitle">Revisitée</p>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Plats</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--4">
                             <div class="dish_info">
                                 <h3 class="dish_title">Coquilles Saint-Jacques</h3>
                                 <p class="dish_subtitle">Accompagnées d'une purée de panais</p>
@@ -83,7 +83,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--5">
                             <div class="dish_info">
                                 <h3 class="dish_title">Magret de canard</h3>
                                 <p class="dish_subtitle">Et parmentier de pommes de terre</p>
@@ -93,7 +93,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--6">
                             <div class="dish_info">
                                 <h3 class="dish_title">Pigeonneau d’Ille-et-Vilaine</h3>
                                 <p class="dish_subtitle">Sur son lit de gnocchis aux légumes</p>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Desserts</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--7">
                             <div class="dish_info">
                                 <h3 class="dish_title">Pétales de violettes glacés</h3>
                                 <p class="dish_subtitle">Et purée de noisettes</p>
@@ -116,7 +116,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--8">
                             <div class="dish_info">
                                 <h3 class="dish_title">Fondant au chocolat</h3>
                                 <p class="dish_subtitle">Revisité</p>
@@ -126,7 +126,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--9">
                             <div class="dish_info">
                                 <h3 class="dish_title">Millefeuille croustillant</h3>
                                 <p class="dish_subtitle">Myrtilles et pâte d’amande</p>
