sass_menu-anime+loader

--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -41,7 +41,7 @@
             <div class="menu_bloc">
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Entrées</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--1">
                             <div class="dish_info">
                                 <h3 class="dish_title">Ravioles de foie gras</h3>
                                 <p class="dish_subtitle">Accompagnés de leur crème à la truffe</p>
@@ -51,7 +51,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--2">
                             <div class="dish_info">
                                 <h3 class="dish_title">Caviar osciètre</h3>
                                 <p class="dish_subtitle">Sur blini à la farine de blé noir</p>
@@ -61,7 +61,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--3">
                             <div class="dish_info">
                                 <h3 class="dish_title">Homard et espuma de potiron</h3>
                                 <p class="dish_subtitle">Mariné aux zestes d'orange</p>
@@ -71,7 +71,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--4">
                             <div class="dish_info">
                                 <h3 class="dish_title">Foie gras de canard cuit entier</h3>
                                 <p class="dish_subtitle">Confiture de figue et pain toasté</p>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Plats</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--5">
                             <div class="dish_info">
                                 <h3 class="dish_title">Noix de coquilles Saint-Jacques</h3>
                                 <p class="dish_subtitle">Sur lit de purée de céleri-rave</p>
@@ -94,7 +94,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--6">
                             <div class="dish_info">
                                 <h3 class="dish_title">Langoustine poêlée</h3>
                                 <p class="dish_subtitle">Purée de patate douce</p>
@@ -104,7 +104,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--7">
                             <div class="dish_info">
                                 <h3 class="dish_title">Mijoté de queue de boeuf</h3>
                                 <p class="dish_subtitle">Et riz sauvage aux zestes de citron</p>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Desserts</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--8">
                             <div class="dish_info">
                                 <h3 class="dish_title">Macaron noisette et chocolat</h3>
                                 <p class="dish_subtitle">Glace au caramel brun et sel de Guérande</p>
@@ -127,7 +127,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--9">
                             <div class="dish_info">
                                 <h3 class="dish_title">Baba au rhum revisité</h3>
                                 <p class="dish_subtitle">Avec son coulis de citron</p>
@@ -137,7 +137,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--10">
                             <div class="dish_info">
                                 <h3 class="dish_title">Tarte au citron meringuée</h3>
                                 <p class="dish_subtitle">Déstructurée</p>
