--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -41,7 +41,7 @@
             <div class="menu_bloc">
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Entrées</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--1">
                             <div class="dish_info">
                                 <h3 class="dish_title">Fricassée d'escargot</h3>
                                 <p class="dish_subtitle">Au piment d'Espelette</p>
@@ -51,7 +51,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--2">
                             <div class="dish_info">
                                 <h3 class="dish_title">Foie gras de canard mi-cuit</h3>
                                 <p class="dish_subtitle">Et ses copeaux de truffe noire</p>
@@ -61,7 +61,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--3">
                             <div class="dish_info">
                                 <h3 class="dish_title">Oeuf au plat</h3>
                                 <p class="dish_subtitle">Assaisonné à la truffe sur lit de caviar</p>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Plats</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--4">
                             <div class="dish_info">
                                 <h3 class="dish_title">Filet de boeuf aux herbes</h3>
                                 <p class="dish_subtitle">Accompagné de sa ribambelle de légumes</p>
@@ -84,7 +84,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--5">
                             <div class="dish_info">
                                 <h3 class="dish_title">Parmentier de queue de boeuf</h3>
                                 <p class="dish_subtitle">À la truffe noire sur sa purée de panais</p>
@@ -94,7 +94,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--6">
                             <div class="dish_info">
                                 <h3 class="dish_title">Filet de turbot</h3>
                                 <p class="dish_subtitle">Aux agrumes</p>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Desserts</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--7">
                             <div class="dish_info">
                                 <h3 class="dish_title">Paris-Brest</h3>
                                 <p class="dish_subtitle">Revisité</p>
@@ -117,7 +117,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--8">
                             <div class="dish_info">
                                 <h3 class="dish_title">Macaron au chocolat d'exception</h3>
                                 <p class="dish_subtitle">Et glace à la vanille de Madagascar</p>
@@ -127,7 +127,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--9">
                             <div class="dish_info">
                                 <h3 class="dish_title">Mousse au chocolat</h3>
                                 <p class="dish_subtitle">Au piment d'Espelette et à la truffe noire</p>
