--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -41,7 +41,7 @@
             <div class="menu_bloc">
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Entrées</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--1">
                             <div class="dish_info">
                                 <h3 class="dish_title">Tartare de thon</h3>
                                 <p class="dish_subtitle">Assaisonné au yuzu</p>
@@ -51,7 +51,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--2">
                             <div class="dish_info">
                                 <h3 class="dish_title">Bouchée de homard croustillant</h3>
                                 <p class="dish_subtitle">Et sa farandole de petits légumes</p>
@@ -61,7 +61,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--3">
                             <div class="dish_info">
                                 <h3 class="dish_title">Velouté de cèpes</h3>
                                 <p class="dish_subtitle">Aux truffes</p>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Plats</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--4">
                             <div class="dish_info">
                                 <h3 class="dish_title">Poulet rôti aux herbes de Provence</h3>
                                 <p class="dish_subtitle">Et sa crème de truffe</p>
@@ -84,7 +84,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--5">
                             <div class="dish_info">
                                 <h3 class="dish_title">Langouste rôtie</h3>
                                 <p class="dish_subtitle">Et ses légumes de saison</p>
@@ -94,7 +94,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--6">
                             <div class="dish_info">
                                 <h3 class="dish_title">Côte de boeuf Angus</h3>
                                 <p class="dish_subtitle">Et sa purée de panais</p>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="menu_bloc_card">
                     <div class="menu_bloc_title"><h3>Desserts</h3></div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--7">
                             <div class="dish_info">
                                 <h3 class="dish_title">Farandole de desserts</h3>
                                 <p class="dish_subtitle">Du chef</p>
@@ -117,7 +117,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--8">
                             <div class="dish_info">
                                 <h3 class="dish_title">Crème brulée</h3>
                                 <p class="dish_subtitle">Revisitée</p>
@@ -127,7 +127,7 @@
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <div class="menu_dishes">
+                        <div class="menu_dishes menu_dishes--9">
                             <div class="dish_info">
                                 <h3 class="dish_title">Tiramisu</h3>
                                 <p class="dish_subtitle">À la noisette</p>
